[gd_scene load_steps=16 format=3 uid="uid://ceolb7qhukb47"]

[ext_resource type="Texture2D" uid="uid://xts8t37jlrj1" path="res://shared_assets/UI/stone_pattern.png" id="1_fwg6b"]
[ext_resource type="Script" path="res://scenes/UI/HUD/Combat_BR_Panel/combat_br_panel.gd" id="2_kfkt4"]
[ext_resource type="FontFile" path="res://Fonts/BlackChancery.tres" id="2_ss5ln"]
[ext_resource type="StyleBox" uid="uid://hikrvka0lrg3" path="res://shared_assets/UI/button50_normal_styleboxtexture.tres" id="3_uqsbt"]
[ext_resource type="StyleBox" uid="uid://5gwr2x8v5t1f" path="res://shared_assets/UI/button50_hover_styleboxtexture.tres" id="4_pr50w"]
[ext_resource type="StyleBox" uid="uid://wyv5spwx0hnb" path="res://shared_assets/UI/button50_pressed_styleboxtexture.tres" id="5_j7pu4"]
[ext_resource type="StyleBox" uid="uid://dt34sx3lb526m" path="res://shared_assets/UI/button50_disabled_styleboxtexture.tres" id="6_4nwnf"]
[ext_resource type="Texture2D" uid="uid://d3vnjgyob6xvm" path="res://scenes/UI/HUD/Button_Spells.png" id="7_a7o8r"]
[ext_resource type="Texture2D" uid="uid://bcs1n6hjnlb45" path="res://scenes/UI/HUD/Button_Items.png" id="8_6riss"]

[sub_resource type="Shortcut" id="12"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0chsf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uclwc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u3nr5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_okqna"]

[sub_resource type="Shortcut" id="6"]

[node name="CombatBRPanel" type="TextureRect"]
custom_minimum_size = Vector2(320, 200)
mouse_filter = 0
texture = ExtResource("1_fwg6b")
stretch_mode = 1
script = ExtResource("2_kfkt4")

[node name="AutoButton" type="Button" parent="."]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 0.960784, 0, 1)
theme_override_fonts/font = ExtResource("2_ss5ln")
theme_override_font_sizes/font_size = 20
theme_override_styles/disabled = ExtResource("6_4nwnf")
theme_override_styles/hover = ExtResource("4_pr50w")
theme_override_styles/pressed = ExtResource("5_j7pu4")
theme_override_styles/normal = ExtResource("3_uqsbt")
shortcut = SubResource("12")
text = "Auto"

[node name="FinishButton" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_right = 100.0
offset_bottom = 50.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0.960784, 1, 1)
theme_override_fonts/font = ExtResource("2_ss5ln")
theme_override_font_sizes/font_size = 18
theme_override_styles/disabled = ExtResource("6_4nwnf")
theme_override_styles/hover = ExtResource("4_pr50w")
theme_override_styles/pressed = ExtResource("5_j7pu4")
theme_override_styles/normal = ExtResource("3_uqsbt")
shortcut = SubResource("12")
text = "Finish
"

[node name="YellowLabel" type="Label" parent="FinishButton"]
layout_mode = 0
offset_left = 1.18921
offset_top = 14.9482
offset_right = 41.1892
offset_bottom = 37.9482
theme_override_colors/font_color = Color(1, 0.960784, 0, 1)
theme_override_fonts/font = ExtResource("2_ss5ln")
theme_override_font_sizes/font_size = 18
text = "F"

[node name="DelayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 100.0
offset_right = 150.0
offset_bottom = 50.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0.960784, 1, 1)
theme_override_fonts/font = ExtResource("2_ss5ln")
theme_override_font_sizes/font_size = 18
theme_override_styles/disabled = ExtResource("6_4nwnf")
theme_override_styles/hover = ExtResource("4_pr50w")
theme_override_styles/pressed = ExtResource("5_j7pu4")
theme_override_styles/normal = ExtResource("3_uqsbt")
shortcut = SubResource("12")
text = "Delay
"

[node name="YellowLabel" type="Label" parent="DelayButton"]
layout_mode = 0
offset_left = 1.18921
offset_top = 14.9482
offset_right = 41.1892
offset_bottom = 37.9482
theme_override_colors/font_color = Color(1, 0.960784, 0, 1)
theme_override_fonts/font = ExtResource("2_ss5ln")
theme_override_font_sizes/font_size = 18
text = "D"

[node name="GuardButton" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0.960784, 1, 1)
theme_override_fonts/font = ExtResource("2_ss5ln")
theme_override_font_sizes/font_size = 18
theme_override_styles/disabled = ExtResource("6_4nwnf")
theme_override_styles/hover = ExtResource("4_pr50w")
theme_override_styles/pressed = ExtResource("5_j7pu4")
theme_override_styles/normal = ExtResource("3_uqsbt")
shortcut = SubResource("12")
text = "Guard
"

[node name="YellowLabel" type="Label" parent="GuardButton"]
layout_mode = 0
offset_left = 1.18921
offset_top = 14.9482
offset_right = 41.1892
offset_bottom = 37.9482
theme_override_colors/font_color = Color(1, 0.960784, 0, 1)
theme_override_fonts/font = ExtResource("2_ss5ln")
theme_override_font_sizes/font_size = 18
text = "G"

[node name="PrepareButton" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 150.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0.960784, 1, 1)
theme_override_fonts/font = ExtResource("2_ss5ln")
theme_override_font_sizes/font_size = 18
theme_override_styles/disabled = ExtResource("6_4nwnf")
theme_override_styles/hover = ExtResource("4_pr50w")
theme_override_styles/pressed = ExtResource("5_j7pu4")
theme_override_styles/normal = ExtResource("3_uqsbt")
shortcut = SubResource("12")
text = "Prep.
"

[node name="YellowLabel" type="Label" parent="PrepareButton"]
layout_mode = 0
offset_left = 4.0
offset_top = 15.0
offset_right = 44.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(1, 0.960784, 0, 1)
theme_override_fonts/font = ExtResource("2_ss5ln")
theme_override_font_sizes/font_size = 18
text = "P
"

[node name="ParryButton" type="Button" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 100.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0.960784, 1, 1)
theme_override_fonts/font = ExtResource("2_ss5ln")
theme_override_font_sizes/font_size = 18
theme_override_styles/disabled = ExtResource("6_4nwnf")
theme_override_styles/hover = ExtResource("4_pr50w")
theme_override_styles/pressed = ExtResource("5_j7pu4")
theme_override_styles/normal = ExtResource("3_uqsbt")
shortcut = SubResource("12")
text = "Parry

"

[node name="YellowLabel" type="Label" parent="ParryButton"]
layout_mode = 0
offset_left = 2.18921
offset_top = 14.9482
offset_right = 42.1892
offset_bottom = 37.9482
theme_override_colors/font_color = Color(1, 0.960784, 0, 1)
theme_override_fonts/font = ExtResource("2_ss5ln")
theme_override_font_sizes/font_size = 18
text = "P"

[node name="SpellButton" type="Button" parent="."]
layout_mode = 0
offset_top = 100.784
offset_right = 50.0
offset_bottom = 150.784
focus_mode = 0
theme_override_styles/disabled = ExtResource("6_4nwnf")
theme_override_styles/hover = ExtResource("4_pr50w")
theme_override_styles/pressed = ExtResource("5_j7pu4")
theme_override_styles/normal = ExtResource("3_uqsbt")
shortcut = SubResource("12")
icon = ExtResource("7_a7o8r")

[node name="InventoryButton" type="Button" parent="."]
layout_mode = 0
offset_top = 50.0
offset_right = 50.0
offset_bottom = 100.0
focus_mode = 0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0chsf")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uclwc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_u3nr5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_okqna")
shortcut = SubResource("6")
shortcut_in_tooltip = false
icon = ExtResource("8_6riss")
flat = true

[node name="EscapeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 156.0
offset_right = 69.0
offset_bottom = 196.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 0.980392, 0, 1)
theme_override_fonts/font = ExtResource("2_ss5ln")
theme_override_styles/disabled = ExtResource("6_4nwnf")
theme_override_styles/hover = ExtResource("4_pr50w")
theme_override_styles/pressed = ExtResource("5_j7pu4")
theme_override_styles/normal = ExtResource("3_uqsbt")
shortcut = SubResource("12")
text = "Escape"

[node name="BandageButton" type="Button" parent="."]
layout_mode = 0
offset_left = 76.0
offset_top = 156.0
offset_right = 140.0
offset_bottom = 196.0
focus_mode = 0
theme_override_colors/font_color = Color(1, 0.980392, 0, 1)
theme_override_fonts/font = ExtResource("2_ss5ln")
theme_override_styles/disabled = ExtResource("6_4nwnf")
theme_override_styles/hover = ExtResource("4_pr50w")
theme_override_styles/pressed = ExtResource("5_j7pu4")
theme_override_styles/normal = ExtResource("3_uqsbt")
shortcut = SubResource("12")
text = "Bandage"

[node name="oterButton" type="Button" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
focus_mode = 0
theme_override_styles/disabled = ExtResource("6_4nwnf")
theme_override_styles/hover = ExtResource("4_pr50w")
theme_override_styles/pressed = ExtResource("5_j7pu4")
theme_override_styles/normal = ExtResource("3_uqsbt")
shortcut = SubResource("12")

[node name="debugFinish" type="Button" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 1.0
offset_right = 202.0
offset_bottom = 51.0
focus_mode = 0
theme_override_styles/disabled = ExtResource("6_4nwnf")
theme_override_styles/hover = ExtResource("4_pr50w")
theme_override_styles/pressed = ExtResource("5_j7pu4")
theme_override_styles/normal = ExtResource("3_uqsbt")
shortcut = SubResource("12")
text = "debug
finish"

[node name="debugWin" type="Button" parent="."]
layout_mode = 0
offset_left = 206.0
offset_top = 1.0
offset_right = 256.0
offset_bottom = 51.0
focus_mode = 0
theme_override_styles/disabled = ExtResource("6_4nwnf")
theme_override_styles/hover = ExtResource("4_pr50w")
theme_override_styles/pressed = ExtResource("5_j7pu4")
theme_override_styles/normal = ExtResource("3_uqsbt")
shortcut = SubResource("12")
text = "debug
win"

[node name="debugKill" type="Button" parent="."]
layout_mode = 0
offset_left = 262.0
offset_top = 25.0
offset_right = 312.0
offset_bottom = 75.0
focus_mode = 0
theme_override_styles/disabled = ExtResource("6_4nwnf")
theme_override_styles/hover = ExtResource("4_pr50w")
theme_override_styles/pressed = ExtResource("5_j7pu4")
theme_override_styles/normal = ExtResource("3_uqsbt")
shortcut = SubResource("12")
text = "debug
kill"

[connection signal="pressed" from="FinishButton" to="." method="_on_finish_button_pressed"]
[connection signal="pressed" from="DelayButton" to="." method="_on_delay_button_pressed"]
[connection signal="pressed" from="GuardButton" to="." method="_on_guard_button_pressed"]
[connection signal="pressed" from="PrepareButton" to="." method="_on_prepare_button_pressed"]
[connection signal="pressed" from="ParryButton" to="." method="_on_parry_button_pressed"]
[connection signal="pressed" from="SpellButton" to="." method="_on_SpellButton_pressed"]
[connection signal="pressed" from="InventoryButton" to="." method="_on_InventoryButton_pressed"]
[connection signal="pressed" from="EscapeButton" to="." method="_on_escape_button_pressed"]
[connection signal="pressed" from="BandageButton" to="." method="_on_bandage_button_pressed"]
[connection signal="pressed" from="debugFinish" to="." method="_on_finish_button_pressed"]
[connection signal="pressed" from="debugWin" to="." method="_on_debug_win_pressed"]
[connection signal="pressed" from="debugKill" to="." method="_on_debug_kill_pressed"]
